Version 3.2.9, released ????-??-??
----------------------------------
- Bugfix: Use java-implemented chmod in AbstractUnarchiver to avoid bug on linux for filenames with special characters
  (mrosoiu)


Version 3.2.8, released 2013-01-04
----------------------------------
- Bugfix: Select the correct artifact handler based of the artifact format (xar or zip)
  (mrosoiu)


Version 3.2.7, released 2013-01-04
----------------------------------
- Include "strategy" entry in on-the-fly generated "manifest.ini" during the "package" phase
- Relocate "xp:ignite" downloaded deps to "/lib/ignite" to avoid conflicts with other possible existing libs
- Add vendor libraries to classpath when running tests
- Include vendor libraries in generated artifact for "app" packing strategy
- Add ${xp.package.packVendorLibs} to skip packing vendor libs
  (mrosoiu)


Version 3.2.6, released 2012-12-10
----------------------------------
- Bugfix: When packing apps, add "lib/bootstrap" entry to the on-the-fly generated "project.pth"
  (mrosoiu)


Version 3.2.5, released 2012-12-10
----------------------------------
- Add ${xp.svn-deploy.legacyVolatileTagName} property to alter the value of ${xp.svn-deploy.volatileTagName}
- Rename "svn-deploy" goal's properties to ${xp.svn-deploy.xxx}
- Add support for running integrations tests from "src/it"
  - Add "integration-test-compile" and "integration-test" phases
- Rename "libs" to "lib" in the generated artifact
- Move XP-Framework artifacts to "libs/runtime" in the generated artifact
- Move XP-Framework bootstrap to "libs/bootstrap" in the generated artifact
- Move "patch" artifacts at the top of the "*.pth" entries list rather than using the "!" marker
- Add "target/xsl" directory to classpath when running tests; if exists
  (mrosoiu)


Version 3.2.4, released 2012-12-07
----------------------------------
- Fix xar artifact description: it does not include dependencies
  (mrosoiu)


Version 3.2.3, released 2012-12-06