@@ -45,7 +45,7 @@
       <plugin>
         <groupId>net.xp-forge.maven.plugins</groupId>
         <artifactId>xp-maven-plugin</artifactId>
-        <version>3.2.7-SNAPSHOT</version>
+        <version>3.2.9-SNAPSHOT</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
