@@ -1,0 +1,5 @@
+[this]
+description="Integration tests eins"
+
+[via-xp]
+class="org.company.lib.common.integration.util.XpIntegrationTest"
