@@ -1,8 +1,0 @@
-[this]
-description="Integration tests"
-
-[via-xp]
-class="org.company.lib.common.integration.util.XpIntegrationTest"
-
-[via-php]
-class="org.company.lib.common.integration.util.PhpIntegrationTest"
