@@ -1,0 +1,5 @@
+[this]
+description="Integration tests zwei"
+
+[via-php]
+class="org.company.lib.common.integration.util.PhpIntegrationTest"
