@@ -1,0 +1,6 @@
+[this]
+description="One"
+
+[main-class]
+class="org.company.lib.common.unittest.util.GreetingTest"
+
