@@ -1,5 +1,5 @@
 [this]
-description="Unit tests"
+description="Two"
 
 [main-class]
 class="org.company.lib.common.unittest.util.GreetingTest"
